fixed login as view

--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -114,7 +114,7 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    Sagnik Sarkar
+                    <%= session.user.FirstName %> <%= session.user.LastName %>
                 </div>
             </nav>
         </div>
