--- a/alpha_web_app/views/Login.ejs
+++ b/alpha_web_app/views/Login.ejs
@@ -37,7 +37,7 @@
                         <a href="#" class="twitter btn btn-block">
                             <span class="icon-twitter mr-3"></span>
                         </a> -->
-                        <a href="#" class="google btn btn-block">
+                        <a href="/auth/google" class="google btn btn-block">
                             <span class="icon-google mr-3"></span>
                         </a>
                     </div>
