--- a/alpha_web_app/views/Login.ejs
+++ b/alpha_web_app/views/Login.ejs
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="css/custom/login.css">
 
     <title>Login</title>
+    <style>
+.blink{
+  color: red;
+}
+
+    </style>
 </head>
 
 <body>
@@ -26,6 +32,7 @@
 
     <div class="content main-div">
         <div class="container">
+		<p class="blink"> Disclaimer: This is a alpha testing application. This app or developers does not take any responsibility of your data </p>
             <div class="row align-items-center">
                 <div class="col-md-5">
                     <h3 class="d-block text-center my-4 text-muted">Ready to be Hisebe. BeHisebi</h3>
