--- a/arch_web_app/views/common/header.ejs
+++ b/arch_web_app/views/common/header.ejs
@@ -86,6 +86,11 @@
                                     href="/transaction/credit/view-cash-credit">View Cash Credit</a>
                             </nav>
                         </div>
+                        <a id="pay-your-debt-id" class="nav-link" href="/transaction/self-transfer">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Self Transfer
+                        </a>
+
                         <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Pay Your Debt
@@ -114,7 +119,8 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    <%= session.user.FirstName %> <%= session.user.LastName %>
+                    <%= session.user.FirstName %>
+                        <%= session.user.LastName %>
                 </div>
             </nav>
         </div>
