self transction done

--- a/arch_web_app/views/common/header.ejs
+++ b/arch_web_app/views/common/header.ejs
@@ -86,7 +86,7 @@
                                     href="/transaction/credit/view-cash-credit">View Cash Credit</a>
                             </nav>
                         </div>
-                        <a id="pay-your-debt-id" class="nav-link" href="/transaction/self-transfer">
+                        <a id="self-transfer-id" class="nav-link" href="/transaction/self-transfer">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Self Transfer
                         </a>
