--- a/arch_web_app/views/common/header.ejs
+++ b/arch_web_app/views/common/header.ejs
@@ -55,6 +55,12 @@
                                 <a id="view-cash-expense-nav" class="nav-link"
                                     href="/transaction/expense/view-cash-expense">View Cash Expense</a>
                             </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">Pay Your
+                                    Debt</a>
+                            </nav>
+
                         </div>
                         <a id="credit-nav" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#creditLayouts" aria-expanded="false" aria-controls="collapseLayouts">
@@ -76,21 +82,27 @@
                                 <a id="view-cash-credit-nav" class="nav-link"
                                     href="/transaction/credit/view-cash-credit">View Cash Credit</a>
                             </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="collect-your-debt-id" class="nav-link"
+                                    href="/transaction/collect-your-debts">Collect Your Debt</a>
+                            </nav>
+
                         </div>
                         <a id="self-transfer-id" class="nav-link" href="/transaction/self-transfer">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Self Transfer
                         </a>
-
-                        <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">
+                        <div class="sb-sidenav-menu-heading">Charts</div>
+                        <a id="expense-pic-chart-id" class="nav-link" href="/charts/expense-pic-chart">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Pay Your Debt
+                            Expense Pic Chart
                         </a>
-                        <a id="collect-your-debt-id" class="nav-link" href="/transaction/collect-your-debts">
+                        <a id="credit-pic-chart-id" class="nav-link" href="/transaction/collect-your-debts">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Collect Your Debt
+                            Credit Pic Chart
                         </a>
-                        <div class="sb-sidenav-menu-heading">Interface</div>
+                        <div class="sb-sidenav-menu-heading">Settings</div>
                         <a id="settings_id" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
