--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -18,11 +18,6 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <!-- <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li> -->
                     <li><a class="dropdown-item" href="/logout">Logout</a></li>
                 </ul>
             </li>
@@ -60,11 +55,13 @@
                                 <a id="view-cash-expense-nav" class="nav-link"
                                     href="/transaction/expense/view-cash-expense">View Cash Expense</a>
                             </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">Pay Your
+                                    Debt</a>
+                            </nav>
+
                         </div>
-                        <!-- <a id="credit_id" class="nav-link" href="/transaction/credit">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Credit
-                        </a> -->
                         <a id="credit-nav" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#creditLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
@@ -85,16 +82,27 @@
                                 <a id="view-cash-credit-nav" class="nav-link"
                                     href="/transaction/credit/view-cash-credit">View Cash Credit</a>
                             </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="collect-your-debt-id" class="nav-link"
+                                    href="/transaction/collect-your-debts">Collect Your Debt</a>
+                            </nav>
+
                         </div>
-                        <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">
+                        <a id="self-transfer-id" class="nav-link" href="/transaction/self-transfer">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Pay Your Debt
+                            Self Transfer
                         </a>
-                        <a id="collect-your-debt-id" class="nav-link" href="/transaction/collect-your-debts">
+                        <div class="sb-sidenav-menu-heading">Charts</div>
+                        <a id="expense-pic-chart-id" class="nav-link" href="/charts/expense-pic-chart">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Collect Your Debt
+                            Expense Pic Chart
                         </a>
-                        <div class="sb-sidenav-menu-heading">Interface</div>
+                        <a id="credit-pic-chart-id" class="nav-link" href="/transaction/collect-your-debts">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Credit Pic Chart
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Settings</div>
                         <a id="settings_id" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
@@ -106,7 +114,6 @@
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a id="bank_settings_id" class="nav-link" href="/settings/bank_settings">Bank
                                     Setting</a>
-                                <!-- <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a> -->
                             </nav>
                         </div>
                     </div>
@@ -114,7 +121,8 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    <%= session.user.FirstName %> <%= session.user.LastName %>
+                    <%= session.user.FirstName %>
+                        <%= session.user.LastName %>
                 </div>
             </nav>
         </div>
