application running in dev env

--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -121,8 +121,8 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    <%= session.user.FirstName %>
-                        <%= session.user.LastName %>
+                    <%= firstName %>
+                    <%=lastName%>
                 </div>
             </nav>
         </div>
